--- a/Latex Document/Latex Files/References.bib
+++ b/Latex Document/Latex Files/References.bib
@@ -18,6 +18,8 @@ url = {https://itextpdf.com/products/itextsharp},
 }
 \end{comment}
 
+
+
 @online{LibraryDef,
     title = {What is a Programming Library? A Beginner’s Guide},
     authors = {Rachel Meltzer},
@@ -41,8 +43,28 @@ url = {https://itextpdf.com/products/itextsharp},
 
 @online{EncryptionAndDecryption,
 	title={Encryption and Decryption},
-	url={https://docs.oracle.com/cd/E19047-01/sunscreen151/806-5397/i996724/index.html\#:~:text=Encryption\%20is\%20the\%20process\%20by,its\%20original\%20(readable)\%20format.},
+	url={https://docs.oracle.com/cd/E19047-01/sunscreen151/806-5397/i996724/index.html\#:\~:text=Encryption\%20is\%20the\%20process\%20by,its\%20original\%20(readable)\%20format.},
 	website={Oracle},
 	year={2010},
 	note = {Accessed on: October 4, 2024},
+}
+
+@online{ProgInterfaceMeaning,
+	title={Interfaces},
+	url={https://users.cs.utah.edu/\~germain/PPS/Topics/interfaces.html\#:\~:text=Interfaces\%20in\%20Object\%20Oriented\%20Programming,on\%20an\%20object\%20(class)},
+	website={The University of Utah},
+	note = {Accessed on: October 14, 2024},
+}
+
+@online{InterfaceMeaning,
+	title = {Interface},
+	url =  {https://www.britannica.com/dictionary/interface},
+	website={Britannica},
+	note = {Accessed on: October 14, 2024},
+}
+
+@misc{DictionaryMeaning,
+	title = {Dictionaries},
+	url = {https://adacomputerscience.org/concepts/struct_dictionary?examBoard=ada&stage=all},
+	note = {Accessed on: October 14, 2024},
 }
