--- a/Latex Document/Latex Files/main.tex
+++ b/Latex Document/Latex Files/main.tex
@@ -9,9 +9,13 @@
 \usepackage{glossaries}
 \usepackage{fontspec}
 \usepackage[hidelinks]{hyperref}
+\usepackage{colortbl}
+\usepackage[table]{xcolor}
 \setlength\bibitemsep{20pt} 
 
 \sloppy
+
+\newfontfamily{\codefont}{CamingoCode}
 
 
 \addbibresource{References.bib}
@@ -45,23 +49,43 @@
     
     \item{Raycasting: using a straight line that starts from one point and continues infinitely (by default) until it detects an object in the way.}
     
-    \item{Canvas: A UI element that contains other elements, including text, images, buttons, or other canvases.}
+    \item{Canvas: A UI element that contains other elements, including (but not limited to) text, images, buttons, or other canvases.}
 
 \begin{itemize}
     \item{On-Screen Canvas: A canvas that is always fixed in the display’s screen.}
     
-    \item{World Space Canvas: A canvas that exist in a world with other objects.}
+    \item{World Space Canvas: A canvas that exist in a world or scene with other objects.}
 \end{itemize}
 
 \end{itemize}
 
 \subsection{Types of Programming Variables}
 \begin{itemize}
-    \item{Enumerator: A variable type in programming that has a certain number of values and can only be assigned to one value.}
+    \item{Enumerator: A variable type in programming that has a certain number of possible values where one is selected, for example:
     
-    \item{Integer: A whole number, such as: 1, 3, -8, 100, 2006.}
+    \begin{itemize}
+    \item{Fruit:}
+    	\begin{enumerate}
+    	\item{Apple,}
+    	\item{Orange,}
+    	\item{Banana,}
+    	\item{Mango,}
+    	\item{Pear,}
+    	\item{Strawberry,}
+    	\end{enumerate}
+    \item{Animal:}
+        \begin{enumerate}
+    	\item{Cat,}
+    	\item{Dog,}
+    	\item{Horse,}
+    	\item{Pigeon,}
+    	\item{Turtle,}
+    	\end{enumerate}
+    \end{itemize} 
+    }   
+    \item{Integer: A whole number, such as: 0, 1, 3, -8, 100, 2006.}
     
-    \item{Float: A decimal number, such as: 1.0, 5.2, -10.33, 7604.099.}
+    \item{Float: A decimal number, such as: 0.0, 0.54, 1.0, 5.2, -10.33, 7604.099.}
     
     \item{String: A text or sequence of characters, such as: “Hello World, 12381 42!”.}
     
@@ -70,6 +94,30 @@
     \item{\fontspec{CamingoCode}Vector3\normalfont: A collection/array of three float variables. In addition to the two variables in \fontspec{CamingoCode}Vector2\normalfont, the third one is named ‘z’.}
     
     \item{Boolean: A variable type that only has two possible values: ‘\fontspec{CamingoCode}true\normalfont’ or ‘\fontspec{CamingoCode}false\normalfont’.}
+    \item{List: A dynamic collection/array of values or data of the same variable type. Examples of variable types include (but not limited to) integers, floats, strings, classes and their sub-classes, objects, or other lists.}
+    
+        \item{Dictionary: A special list that contains data as key-value pairs. The key:
+        
+        \begin{enumerate}
+        
+        \item{\textbf{MUST} be unique}
+        \item{Is associated with a value}
+        \item{\textbf{MUST} be a simple value type (typically an integer or a string)}
+        \item{Is a quicker way to index values, even in unordered data \cite{DictionaryMeaning}.}        
+        \end{enumerate}        
+        }    
+    \item{Interface (three meanings):
+    \begin{enumerate}
+    \item{A way information is shown in a computer or device to its user. Example of interfaces in this document's topic are the canvases and the elements they contain and the way they are structured and presented \cite{InterfaceMeaning}. Other examples of interfaces include the green arrows and texts in the assembly game that tell they user what to do, and the unique canvas design in the MCQ game.}
+    
+    \item{The way that a user is able to interact with a program. For example, the buttons, sliders, and input fields that are shown in the canvases \cite{InterfaceMeaning}.}
+    
+    \item{A programming structure that enforces certain properties on an object or class. For example, there can be a phone class, a computer class, and a TV class. All of these classes \textbf{MUST HAVE} a ``\fontspec{CamingoCode}TurnOn()\normalfont'' function, but how the function is written in each specific class is up to the programmer \cite{ProgInterfaceMeaning}.}
+    
+    \end{enumerate}
+    
+    }
+    
  \end{itemize}
 \section{Acronyms}
 
