Update 2. Methodology and Procedures.tex

--- a/Latex Document/Latex Files/2. Methodology and Procedures.tex
+++ b/Latex Document/Latex Files/2. Methodology and Procedures.tex
@@ -143,7 +143,7 @@ The process of saving is:
 \end{enumerate}
 
 \subsection{Programming and Designing the Action Plan}
-The Action Plan is a survey that prompts the user to ask questions about their status with asthma. It also has some questions about their personal information such as birthday, name, and gender. The overall number of questions are twenty. However, each question has a different type of answers:
+The Action Plan is a survey that prompts the user to provide questions about their status with asthma. It also has some questions about their personal information such as birthday, name, and gender. The overall number of questions are twenty. However, each question has a different type of answers:
 \begin{enumerate}
     \item{Integer Answers}
     
