--- a/Latex Document/Latex Files/main.tex
+++ b/Latex Document/Latex Files/main.tex
@@ -11,6 +11,7 @@
 \usepackage[hidelinks]{hyperref}
 \usepackage{colortbl}
 \usepackage[table]{xcolor}
+\usepackage{float}
 \setlength\bibitemsep{20pt} 
 
 \sloppy
